--- a/impressum.html
+++ b/impressum.html
@@ -1,18 +1,28 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5JKHZKH68D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5JKHZKH68D');
+</script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Impressum – SafeZone Postproduction</title>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@300;400;500&family=Inter:wght@400&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    html, body {
-      width: 100vw;
-      min-height: 100vh;
+    body {
+      font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
       background: #f1c1db;
       color: #2d1a45;
-      font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+      min-height: 100vh;
+      cursor: none;
+      padding: 2.5rem 1.5rem;
       font-size: 1.08rem;
       line-height: 1.7;
       text-align: left;
