--- a/impressum.html
+++ b/impressum.html
@@ -176,10 +176,14 @@
     Registernummer: HRB 276247 B</p>
     <p><b>Umsatzsteuer:</b><br>
     Umsatzsteuer-Identifikationsnummer gemäß § 27 a UStG: [wird nachgereicht]</p>
-    <p><b>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</b><br>
+        <p><b>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</b><br>
     SafeZone Postproduction GmbH<br>
     Stargarder Str. 35<br>
     10437 Berlin</p>
+
+    <p><b>Fotocredits</b><br>
+    Foto: Jonas Wresch – <a href="https://www.jonaswresch.com" target="_blank" rel="noopener">www.jonaswresch.com</a>
+    </p>
 <script>
 // Fadenkreuz-Cursor mit Rotation wie auf index.html
 const cursor = document.getElementById("cursor");
