--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <meta name="robots" content="index, follow" />
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@300;400;500&family=Inter:wght@400&display=swap" rel="stylesheet">
 <!-- Standard-Favicon für Browser -->
-<link rel="icon" type="image/png" sizes="48x48" href="/Favicon_pink_48px.png">
+<link rel="icon" type="image/png" sizes="48x48" href="Favicon_pink_48px.png">
 
 <!-- Apple Touch Icon für iOS-Geräte -->
-<link rel="apple-touch-icon" sizes="152x152" href="/Favicon_pink_152px.png">
+<link rel="apple-touch-icon" sizes="152x152" href="Favicon_pink_152px.png">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
