--- a/impressum.html
+++ b/impressum.html
@@ -14,6 +14,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Impressum – SafeZone Postproduction</title>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@300;400;500&family=Inter:wght@400&display=swap" rel="stylesheet">
+  <!-- Standard-Favicon für Browser -->
+<link rel="icon" type="image/png" sizes="48x48" href="Favicon_pink_48px.png">
+
+<!-- Apple Touch Icon für iOS-Geräte -->
+<link rel="apple-touch-icon" sizes="152x152" href="Favicon_pink_152px.png">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -166,22 +171,22 @@
     ℅ Anica Walz<br>
     Stargarder Str. 35<br>
     10437 Berlin</p>
-    <p><b>Vertreten durch:</b><br>
+    <p><b>Vertreten durch:</b>
     Emily Imhof, Anica Walz</p>
-    <p><b>Kontakt:</b><br>
+    <p><b>Kontakt:</b>
     E-Mail: <a href="mailto:office@safezone-postproduction.de">office@safezone-postproduction.de</a></p>
-    <p><b>Registereintrag:</b><br>
+    <p><b>Registereintrag:</b>
     Eintragung im Handelsregister.<br>
     Registergericht: Amtsgericht Charlottenburg<br>
     Registernummer: HRB 276247 B</p>
-    <p><b>Umsatzsteuer:</b><br>
+    <p><b>Umsatzsteuer:</b>
     Umsatzsteuer-Identifikationsnummer gemäß § 27 a UStG: [wird nachgereicht]</p>
-        <p><b>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</b><br>
+        <p><b>Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:</b>
     SafeZone Postproduction GmbH<br>
     Stargarder Str. 35<br>
     10437 Berlin</p>
 
-    <p><b>Fotocredits</b><br>
+    <p><b>Fotocredits</b>
     Foto: Jonas Wresch – <a href="https://www.jonaswresch.com" target="_blank" rel="noopener">www.jonaswresch.com</a>
     </p>
 <script>
