--- a/datenschutz.html
+++ b/datenschutz.html
@@ -14,6 +14,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Datenschutz – SafeZone Postproduction</title>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@300;400;500&family=Inter:wght@400&display=swap" rel="stylesheet">
+  <!-- Standard-Favicon für Browser -->
+<link rel="icon" type="image/png" sizes="48x48" href="Favicon_pink_48px.png">
+
+<!-- Apple Touch Icon für iOS-Geräte -->
+<link rel="apple-touch-icon" sizes="152x152" href="Favicon_pink_152px.png">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -162,26 +167,26 @@
   </nav>
     <h1>Datenschutzerklärung</h1>
     <p><b>Stand:</b> Juli 2025</p>
-    <p><b>1. Verantwortliche Stelle</b><br>
+    <p><b>1. Verantwortliche Stelle</b>
     SafeZone Postproduction GmbH<br>
     Stargarder Str. 35, 10437 Berlin<br>
     E-Mail: office@safezone-postproduction.de<br>
     Geschäftsführung: Emily Imhof, Anica Walz</p>
-    <p><b>2. Hosting & Auftragsverarbeitung</b><br>
+    <p><b>2. Hosting & Auftragsverarbeitung</b>
     Die Website läuft über Google Workspace bzw. dessen Infrastruktur. Dabei verarbeitet Google personenbezogene Daten wie IP-Adressen; ein entsprechender AV-Vertrag (Art. 28 DSGVO) besteht.</p>
-    <p><b>3. Zugriffsdaten und Server-Logfiles</b><br>
+    <p><b>3. Zugriffsdaten und Server-Logfiles</b>
     Beim Besuch der Website werden automatisch Daten wie IP-Adresse, Browsertyp, Betriebssystem, Referrer-URL und Zugriffzeit als Logfiles erhoben. Rechtsgrundlage ist Art. 6 Abs. 1 lit. f DSGVO (berechtigtes Interesse: Betrieb + Sicherheit). Die Daten werden spätestens nach max. 30 Tagen gelöscht.</p>
-    <p><b>4. Kontaktaufnahme per E-Mail</b><br>
+    <p><b>4. Kontaktaufnahme per E-Mail</b>
     Wenn Sie uns per E-Mail kontaktieren, speichern wir Name, E-Mail-Adresse, Inhalt der Nachricht zum Zweck der Bearbeitung und ggf. Anschlussfragen. Rechtsgrundlage: Art. 6 Abs. 1 lit. b DSGVO (Vertragserfüllung) oder lit. f (berechtigtes Interesse).</p>
-    <p><b>5. Google Analytics</b><br>
+    <p><b>5. Google Analytics</b>
     Wir nutzen Google Analytics 4 mit aktivierter IP-Anonymisierung (IP-Masking). Die erfassten Nutzungsdaten werden in der Regel in den USA verarbeitet, jedoch auf Grundlage der EU-Standardvertragsklauseln. Ein Opt-out ist jederzeit möglich über Browser-Add-ons: <a href="https://tools.google.com/dlpage/gaoptout" target="_blank" rel="noopener">https://tools.google.com/dlpage/gaoptout</a>. Rechtsgrundlage: Art. 6 Abs. 1 lit. a DSGVO (Einwilligung).</p>
-    <p><b>6. Einbindung von YouTube/Vimeo</b><br>
+    <p><b>6. Einbindung von YouTube/Vimeo</b>
     Unsere Website kann zukünftig Inhalte der Plattformen YouTube oder Vimeo einbinden. Beim Aufruf solcher Seiten wird Ihre IP-Adresse an den Anbieter übermittelt. Nutzer werden vorab informiert und um Einwilligung gebeten.</p>
-    <p><b>7. Social-Media-Präsenzen</b><br>
+    <p><b>7. Social-Media-Präsenzen</b>
     Wir sind mit Profilen auf LinkedIn, Xing und Meta aktiv. Beim Besuch unserer Profile gelten die Datenschutzbestimmungen der jeweiligen Plattformbetreiber.</p>
-    <p><b>8. Cookies & Consent</b><br>
+    <p><b>8. Cookies & Consent</b>
     Unsere Website verwendet technisch notwendige Cookies. Tracking-Cookies wie Google Analytics oder Social Plugins setzen wir nur nach expliziter Einwilligung (Consent-Banner). Die Einwilligung kann jederzeit widerrufen werden.</p>
-    <p><b>9. Rechtsgrundlage der Verarbeitung</b><br>
+    <p><b>9. Rechtsgrundlage der Verarbeitung</b>
     Wir verarbeiten personenbezogene Daten auf Grundlage folgender Rechtsnormen:
       <ul>
         <li>Art. 6 Abs. 1 lit. a DSGVO – Einwilligung</li>
@@ -189,9 +194,9 @@
         <li>Art. 6 Abs. 1 lit. f DSGVO – berechtigtes Interesse</li>
       </ul>
     </p>
-    <p><b>10. Auftragsverarbeitung</b><br>
+    <p><b>10. Auftragsverarbeitung</b>
     Wir haben mit unseren Dienstleistern (z. B. Google für Hosting und Analytics) schriftliche Auftragsverarbeitungsverträge (AV-Verträge gemäß Art. 28 DSGVO) abgeschlossen.</p>
-    <p><b>11. Speicherdauer</b><br>
+    <p><b>11. Speicherdauer</b>
     Personenbezogene Daten werden nur solange gespeichert, wie es zweckgebunden erforderlich ist:
       <ul>
         <li>Logfiles: max. 30 Tage</li>
@@ -199,11 +204,11 @@
         <li>Analytics-Daten: i.d.R. 14 Monate</li>
       </ul>
     </p>
-    <p><b>12. Widerspruch gegen Werbe-Mails</b><br>
+    <p><b>12. Widerspruch gegen Werbe-Mails</b>
     Wir widersprechen der Nutzung unserer veröffentlichten Kontaktdaten zur Zusendung unaufgeforderter Werbung oder Informationsmaterialien (§ 7 UWG).</p>
-    <p><b>13. Betroffenenrechte</b><br>
+    <p><b>13. Betroffenenrechte</b>
     Sie haben das Recht auf Auskunft, Berichtigung, Löschung, Einschränkung der Verarbeitung, Widerspruch, Datenübertragbarkeit und Widerruf erteilter Einwilligungen (Art. 15–21 DSGVO). Zudem steht Ihnen ein Beschwerderecht bei der Aufsichtsbehörde (z. B. Berliner Datenschutzbeauftragte) zu.</p>
-    <p><b>14. Automatisierte Entscheidungen / Profiling</b><br>
+    <p><b>14. Automatisierte Entscheidungen / Profiling</b>
     Wir setzen keine automatisierten Entscheidungsverfahren oder Profiling ein. Sie haben das Recht, hiervon ausgenommen zu werden.</p>
     <script>
 // Fadenkreuz-Cursor mit Rotation wie auf index.html
